--- a/ipu/templates/account/landing.html
+++ b/ipu/templates/account/landing.html
@@ -27,7 +27,7 @@
         </a>
       <ul id="nav-mobile" class="right">
         <li><a href="{% url 'intro' %}">Why GGSIPU</a></li>
-        <li><a href="{% url 'procedures' %}">Procedures</a></li>
+        <li><a href="{% url 'team' %}">Meet The Team</a></li>
         <li><a href="{% url 'stats' %}">Placement Stats</a></li>
       </ul>
       </div>
@@ -46,7 +46,7 @@
       </a>
       <ul id="mobile-links">
         <li><a href="{% url 'intro' %}">Why GGSIPU</a></li>
-        <li><a href="{% url 'procedures' %}">Procedures</a></li>
+        <li><a href="{% url 'team' %}">Meet The Team</a></li>
         <li><a href="{% url 'stats' %}">Placement Stats</a></li>
       </ul>
     </div>
@@ -89,37 +89,7 @@
   </div>
   <div class="section" id="third-section">
     <div class="row container" id="third-box">
-      <h3>Development & Maintenance team</h3>
-      <div id="third-box-images">
-            <div class="team-member">
-              <img class="circle responsive-img" src="{% static 'account/images/team/bob.jpg' %}">
-              <h5>Pratulya Bubna</h5>
-              <div id="icons" class="hide-on-small-only">
-              	<i class="fa fa-google-plus-square fa-2x" aria-hidden="true" style="color: #dd4b39;"></i>
-              	<i class="fa fa-facebook-square fa-2x" aria-hidden="true" style="color: #3B5998;"></i>
-              	<i class="fa fa-linkedin-square fa-2x" aria-hidden="true" style="color: #4875B4;"></i>
-             </div>
-
-            </div>
-            <div class="team-member">
-              <img class="circle responsive-img" src="{% static 'account/images/team/rajjo.jpg' %}">
-              <h5>Rajneesh Sharma</h5>
-               <div id="icons">
-              	<i class="fa fa-google-plus-square fa-2x" aria-hidden="true" style="color: #dd4b39;"></i>
-              	<i class="fa fa-facebook-square fa-2x" aria-hidden="true" style="color: #3B5998;"></i>
-              	<i class="fa fa-linkedin-square fa-2x" aria-hidden="true" style="color: #4875B4;"></i>
-             </div>
-            </div>
-            <div class="team-member">
-              <img class="circle responsive-img" src="{% static 'account/images/team/shivam.jpg' %}">
-              <h5>Shivam Sharma</h5>
-               <div id="icons">
-              	<i class="fa fa-google-plus-square fa-2x" aria-hidden="true" style="color: #dd4b39;"></i>
-              	<i class="fa fa-facebook-square fa-2x" aria-hidden="true" style="color: #3B5998;"></i>
-              	<i class="fa fa-linkedin-square fa-2x" aria-hidden="true" style="color: #4875B4;"></i>
-             </div>
-           </div>
-      </div>
+      <h3>© 2016 GURU GOBIND SINGH INDRAPRASTHA UNIVERSITY. All rights reserved.</h3>
     </div>
   </div>
 
