--- a/ipu/templates/company/home.html
+++ b/ipu/templates/company/home.html
@@ -40,7 +40,7 @@
 {% endblock %}
 
 {% block menu_icon_dropdown %}
-	<li><a href="#">wrgwearg</a></li>
+	<li><a href="#">Report</a></li>
     <li class="divider"></li>
 {% endblock %}
 
