--- a/ipu/templates/faculty/home.html
+++ b/ipu/templates/faculty/home.html
@@ -35,8 +35,9 @@
 {% endblock %}
 
 {% block menu_icon_dropdown %}
-	<li><a href="#">wrgwearg</a></li>
+	<li><a href="#">Manage dummy company</a></li>
     <li class="divider"></li>
+    <li><a href="#">Report</a></li>
 {% endblock %}
 
 {% block user_name_card_s %}
