--- a/ipu/templates/student/home.html
+++ b/ipu/templates/student/home.html
@@ -67,8 +67,9 @@
     <li class="divider"></li>
     {% if student.resume %}
     <li><a href = "javascript:void(0)" onclick = "document.getElementById('light4').style.display='flex';document.getElementById('fade4').style.display='flex'">Uploaded resume</a></li>
-    <li class="divider"></li>
     {% endif %}
+    <li class="divider"></li>
+	<li><a href="">Report</a></li>
 {% endblock %}
 
 
