--- a/ipu/templates/college/home.html
+++ b/ipu/templates/college/home.html
@@ -61,6 +61,8 @@
 	<li><a href="{% url 'manage_faculty' %}" >Manage Faculty</a></li>
 	<li class="divider"></li>
 	<li><a href="{% url 'manage_dcompany' %}" >Manage Dummy Company</a></li>
+	<li class="divider"></li>
+	<li><a href="">Report</a></li>
 {% endblock %}
 
 {% block user_type %}
