--- a/ipu/templates/notification/submit_issue.html
+++ b/ipu/templates/notification/submit_issue.html
@@ -1,19 +1,14 @@
-<!DOCTYPE html>
-<html>
 {% load staticfiles %}
 {% load material_form %}
-<script src="{% static 'material/js/jquery-2.2.0.js' %}"></script>
-{% include 'material/includes/material_js.html' %}
 
-<head>
-    <title>Issue</title>
-<!--    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script> -->
-</head>
-<body>
     <form method = 'POST' id = "submit_issue-form" action="{% url 'submit_issue' %}">
         {% csrf_token %}
         {% form form=issue_form %}
-        {% endform %}                 
+        {% endform %}     
+    	<div id="site-recaptcha-div" style="margin-bottom: 3%; margin-top: 2%"></div> 
         <button type="submit" id="submitissue" class="btn waves-effect waves-light-right">Submit</button>
     </form>
-</body>
+    <script src="https://www.google.com/recaptcha/api.js?onload=onloadCallbackHelpForm&render=explicit"
+        async defer>
+    </script>
+
