--- a/ipu/templates/college/association_requests.html
+++ b/ipu/templates/college/association_requests.html
@@ -10,7 +10,7 @@
 				</div>
 				<div class="card-action">
 					<a class="waves-effect waves-light btn" href=" {{ ass.url.session_url }} ">Accept</a>
-					<a class="waves-effect waves-light btn" href=" {{ ass.url.dissoci_url }} ">Decline</a>
+					<a class="waves-effect waves-light btn" href=" {{ ass.url.decline_url }} ">Decline</a>
 				</div>
 			</div>
 			{% empty %}
