--- a/ipu/templates/college/home.html
+++ b/ipu/templates/college/home.html
@@ -61,6 +61,8 @@
 	<li><a href="{% url 'manage_faculty' %}" >Manage Faculty</a></li>
 	<li class="divider"></li>
 	<li><a href="{% url 'manage_dcompany' %}" >Manage Dummy Company</a></li>
+	<li class="divider"></li>
+	<li><a href="{% url 'manage_dissociation' %}" >Block/Unblock Companies</a></li>
 {% endblock %}
 
 {% block user_type %}
@@ -84,6 +86,8 @@
           Associate Companies</a></li>
     <li data-main_div="#requests"><a class="waves-effect" href="#!"><i class="fa fa-envelope" aria-hidden="true"></i> 
           Association Requests</a></li>
+    <li data-main_div="#myrequests"><a class="waves-effect" href="#!"><i class="fa fa-envelope" aria-hidden="true"></i> 
+          My Requests</a></li>
     <li data-main_div="#notifications"><a class="waves-effect" href="#!"><i class="fa fa-bell" aria-hidden="true"></i>Notifications</a></li>     
     <li data-main_div="#sessions_div"><a class="waves-effect" href="#!"><i class="fa fa-clock-o" aria-hidden="true"></i>Sessions</a></li>
     
@@ -104,8 +108,9 @@
 {% endblock %}
 
 {% block tabs%}
-	<li class="tab col s3"><a class="active" href="#associate">Associate With Companies</a></li>
+	<li class="tab col s2"><a class="active" href="#associate">Associate With Companies</a></li>
 	<li id = "request" class="tab col s2" data-url="/college/association_requests/"><a href="#requests">Association Requests</a></li>
+	<li id = "myrequest" class="tab col s2" data-url="/recruitment/myrequests/"><a href="#myrequests">My Requests</a></li>
 	<li id = "notification" class="tab col s2" url="{% url 'select_streams' %}"><a id="notification-anchor" href="#notifications">Notification</a></li>
 	<li class="tab col s2"><a href="#settings">Settings</a></li>
 	<li id="session" class="tab col s2"><a href="#sessions_div">Sessions</a></li>
@@ -122,6 +127,7 @@
 		</form>
 	</div>
 	<div id="requests" class="col s12"></div>
+	<div id="myrequests" class="col s12"></div>
 
 <div id="notifications" class="col s12">
 		<div class="vertical-tabs">
