--- a/ipu/templates/company/association_requests.html
+++ b/ipu/templates/company/association_requests.html
@@ -50,7 +50,7 @@
 	
 				<div class="card-action yellow-text">
 					<a class="waves-effect waves-light btn" href=" {{ ass.url.session_url }} ">Accept</a>
-					<a class="waves-effect waves-light btn" href=" {{ ass.url.dissoci_url }} ">Decline</a>
+					<a class="waves-effect waves-light btn" href=" {{ ass.url.decline_url }} ">Decline</a>
 				</div>
 	
 			</div>
