--- a/ipu/templates/dummy_company/manage_dummy_company.html
+++ b/ipu/templates/dummy_company/manage_dummy_company.html
@@ -29,6 +29,8 @@
                 <li><a href="{% url 'manage_faculty' %}" >Manage Faculty</a></li>
                 <li class="divider"></li>
                 <li><a href="{% url 'manage_dcompany' %}" >Manage Dummy Company</a></li>
+                <li class="divider"></li>
+                <li><a href="{% url 'manage_dissociation' %}" >Block/Unblock Companies</a></li>
 {% endblock %}
 
 {% block user_email_id_s %}
