--- a/ipu/templates/student/paygrade.html
+++ b/ipu/templates/student/paygrade.html
@@ -8,13 +8,13 @@
 	{% form form=paygrade_form %}{% endform %}
 	<div class="row">
 		<div class="col s6 offset-s3">
-			<button class="btn btn-waves" type="submit" style="width: 100%">Choose</button>
+			<button class="btn btn-waves" type="submit" style="width: 100%">Confirm</button>
 		</div>
 	</div>
 </form>
-
+<script type="text/javascript" src="{% static 'student/paygrade.js' %}"></script>
 <script>
 	$(document).ready(function() {
-		Settings.init(['paygrade-form']);
+		Paygrade.init();
 	});
 </script>
