--- a/ipu/templates/account/post_signup.html
+++ b/ipu/templates/account/post_signup.html
@@ -6,7 +6,7 @@
 	<div class="container blue-text">
 		<div class="row">
 			<div class="col s8 offset-s2">
-				<h3> OOPS! </h3>
+				<h3> Welcome Aboard {{ user.username }}! </h3>
 				<br>
 				<p> An account activation links has been sent to your registered email address {{ user.email }}.</p>
 				<p> Click on the activation link in the email. </p>
