--- a/ipu/templates/notification/view_solution.html
+++ b/ipu/templates/notification/view_solution.html
@@ -1,6 +1,4 @@
 {% load staticfiles %}
-<script src="{% static 'material/js/jquery-2.2.0.js' %}"></script>
-{% include 'material/includes/material_js.html' %}
 
 <div class="col s12">
 	<div class="card">
@@ -8,7 +6,7 @@
 	        <span class="card-title">
 	        <div class="row">
 		            <div class="col s7"><h5>{{ issue_type }}</h5></div>
-		            <div class="col s5"><h5>{{ issue_object.creation_time }}</h5></div>
+		            <div class="col s5"><h5 class="right-align">{{ issue_object.creation_time }}</h5></div>
 		           <hr/>
 	        </div>
 	        </span>
@@ -20,7 +18,7 @@
 	    </div>
 	    <hr/>
 	    <br>
-		        <button id = "ok" class="btn waves-effect waves-light-right">Okay</button>
+		        <button id = "ok-view-solution" class="btn waves-effect waves-light-right">Okay</button>
 	    </div>
 	</div>
 </div>
