--- a/ipu/templates/account/activation_success.html
+++ b/ipu/templates/account/activation_success.html
@@ -1,4 +1,4 @@
-{% extends 'account/base.html' %}
+{% extends 'account/nav-landing.html' %}
 {% block title %} Acitvation Complete {% endblock %}
 {% block content %} 
 	<div class="row">
