--- a/ipu/templates/account/forgot_password.html
+++ b/ipu/templates/account/forgot_password.html
@@ -1,15 +1,15 @@
-{% extends 'account/base.html' %}
+{% extends 'account/nav-landing.html' %}
 {% load staticfiles %}
 {% load material_form %}
 {% block title %} Forgot Password {% endblock %}
-{% block content %} 
+{% block main %} 
 	<div id="forgot-password-form-div" class="row">
 		<h4 class="col s12 center teal-text">Forgot Password</h4>
 		<form class="col s8 offset-s2" action="{% url 'forgot_password' %}" method='POST' id="forgot-password-form">
 			{% csrf_token %}
 			{% form form=forgot_password_form %}{% endform %}
 			<div class="col s12">
-				<button type="submit" name="forgot_password" class="btn btn-waves-light col s8 offset-s2" style="width: 80%">Proceed</button>
+				<button type="submit" name="forgot_password" class="btn btn-waves-light col s8 offset-s2" style="width: 60%">Proceed</button>
 			</div>
 		</form>
 	</div>
