--- a/ipu/templates/account/forgot_password_email_sent.html
+++ b/ipu/templates/account/forgot_password_email_sent.html
@@ -1,6 +1,6 @@
-{% extends 'account/base.html' %}
+{% extends 'account/nav-landing.html' %}
 {% block title %} Forgot Password Email Sent {% endblock %}
-{% block content %} 
+{% block main %} 
 	We've emailed you instructions for resetting your password at {{ email }}. If an account exists with the email you entered, you should receive them shortly.
 	<br>
 	If you don't receive an email, please make sure you've entered the address you registered with, and check your spam folder.
