--- a/ipu/templates/account/inactive.html
+++ b/ipu/templates/account/inactive.html
@@ -1,4 +1,4 @@
-{% extends 'account/base.html' %}
+{% extends 'account/nav-landing.html' %}
 {% load staticfiles %}
 {% block title %}Account Inactive{% endblock title %}
 {% block head %} <link type="text/css" rel="stylesheet" href="{% static 'student/inactive.css'%}"  media="screen,projection"/> {% endblock %}
