--- a/ipu/templates/account/set_password.html
+++ b/ipu/templates/account/set_password.html
@@ -1,4 +1,4 @@
-{% extends 'account/base.html' %}
+{% extends 'account/nav-landing.html' %}
 {% load staticfiles %}
 {% load material_form %}
 {% block title %} Set Password {% endblock %}
