--- a/ipu/templates/account/team.html
+++ b/ipu/templates/account/team.html
@@ -1,12 +1,28 @@
 {% extends 'account/nav-landing.html' %}
 {% load staticfiles %}
 
-
+{% block title %}Meet the team – Training and placement cell – Guru Gobind Singh Indraprastha Univeristy | Meet the team of tnp portal at IP univerisity | Pratulya Bubna | Rajneesh Sharma | Shivam Sharma | IP  University web development team{% endblock %}
 
 {% block head %}
   <link type="text/css" rel="stylesheet" href="{% static 'common/css/font-awesome/css/font-awesome.min.css' %}" />
   <link type="text/css" rel="stylesheet" href="{% static 'materialize-blue.css' %}" />
   <link type="text/css" rel="stylesheet" href="{% static 'account/css/team.css' %}" />
+
+  <!--SEO work meta tags-->
+    <meta name="keywords" content="Meet the team Training and placement cell Guru Gobind Singh Indraprastha Univeristy, Meet the team of tnp portal at IP univerisity, Pratulya Bubna, Rajneesh Sharma, Shivam Sharma, IP  University web development team"> 
+
+	<meta name="description" content="Meet the team of training and placement portal at IP univerisity |  IP univeristy web development team | Pratulya Bubna | Rajneesh Sharma | Shivam Sharma | Tnp portal web development team IP univerisity | GGSIPU web development team">
+
+	<meta name="twitter:title" content= "Meet the team – Training and placement cell – Guru Gobind Singh Indraprastha Univeristy | Meet the team of tnp portal at IP univerisity | Pratulya Bubna | Rajneesh Sharma | Shivam Sharma | IP  University web development team" />
+
+	<meta name="twitter:description" content="Meet the team of training and placement portal at IP univerisity |  IP univeristy web development team | Pratulya Bubna | Rajneesh Sharma | Shivam Sharma | Tnp portal web development team IP univerisity | GGSIPU web development team" />
+
+	<meta property="og:title" content="Meet the team – Training and placement cell – Guru Gobind Singh Indraprastha Univeristy | Meet the team of tnp portal at IP univerisity | Pratulya Bubna | Rajneesh Sharma | Shivam Sharma | IP  University web development team" />
+
+	<meta property="og:description" content="Meet the team of training and placement portal at IP univerisity |  IP univeristy web development team | Pratulya Bubna | Rajneesh Sharma | Shivam Sharma | Tnp portal web development team IP univerisity | GGSIPU web development team" />
+	<meta property="og:url" content= "https://placements.ggsipu.ac.in/team/" />
+  <!--SEO work end-->
+
 {% endblock %}
 
 {% block main %}
