--- a/ipu/templates/account/activation_failure.html
+++ b/ipu/templates/account/activation_failure.html
@@ -1,4 +1,4 @@
-{% extends 'account/base.html' %}
+{% extends 'account/nav-landing.html' %}
 {% block title %} Acitvation Failed {% endblock %}
 {% block content %}
 	<div class="row">
